--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     position: fixed;
     inset: 0;
     z-index: 0;
-    background: radial-gradient(125% 125% at 50% 10%, #fff 40%, #6366f1 100%);
+    background: radial-gradient(125% 125% at 50% 10%, #1A1C2C 40%, #6366f1 100%);
   "></div>
 
 
