--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="./assets/logo.jpg" type="image/x-icon">
-  <title>Ficha Médica - Centro Clínico</title>
+  <title>Ficha Médica - Clínico PV</title>
   <link rel="stylesheet" href="./css/styles.css" />
 
 </head>
