--- a/index.html
+++ b/index.html
@@ -14,29 +14,31 @@
 <body>
 
   <nav class="nav_principal">
-    <div class="navbar-left">
-      <img src="./assets/logo.jpg" alt="Logo Centro Clínico" class="navbar-logo" />
-    </div>
+    <div class="nav_container">
 
-    <div class="navbar-buttons">
-      <button class="btn primary nav-btn">Reserva tu hora</button>
-      <button class="btn nav-btn-second">Busca tu doctor</button>
-    </div>
+      <div class="navbar-left">
+        <img src="./assets/logo.jpg" alt="Logo Centro Clínico" class="navbar-logo" />
+      </div>
 
-    <div class="search-option">
-      <div class="navbar-contact">
-        <div class="contact-card">
-          <p>📞 +56 9 1234 5678</p>
+      <div class="navbar-buttons">
+        <button class="btn primary nav-btn">Reserva tu hora</button>
+        <button class="btn nav-btn-second">Busca tu doctor</button>
+      </div>
+
+      <div class="search-option">
+        <div class="navbar-contact">
+          <div class="contact-card">
+            <p>📞 +56 9 1234 5678</p>
+          </div>
+        </div>
+
+        <div class="navbar-search">
+          <button class="search-btn" aria-label="Buscar">
+            <img src="./assets/buscar.svg" alt="" srcset="">
+          </button>
         </div>
       </div>
-
-      <div class="navbar-search">
-        <button class="search-btn" aria-label="Buscar">
-          <img src="./assets/buscar.svg" alt="" srcset="">
-        </button>
-      </div>
     </div>
-
   </nav>
 
 
@@ -44,11 +46,10 @@
 
 
     <nav class="header">
-      
-      <p class="subtitle">Centro Clínico - Registro de Pacientes</p>
+
+      <p class="subtitle">Clinico PV - Registro de Pacientes</p>
     </nav>
 
-    <h1 class="header_title">Ficha Médica</h1>
     <main id="app" class="container">
       <section class="card">
         <h2>Registro de Pacientes</h2>
