--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <div class="field">
               <label for="fechaNacimiento">Fecha de Nacimiento*</label>
-              <input type="date" id="fechaNacimiento" required>
+              <input type="date" id="fechaNacimiento" required name="fechaNacimiento">  <!-- le agregue name para poder llemar al script, espero que no aruine algo -->
               <small class="error-msg" id="err-fechaNacimiento"></small>
             </div>
 
