--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="grid-2">
             <div class="field">
               <label for="rut">RUT*</label>
-              <input type="text" id="rut" name="rut" required oninput="checkRut(this)" placeholder="Ingrese RUT"> <!-- tecnicaménte al darle mandar deberia fallar o guardarse bien -->
+              <input type="text" id="rut" name="rut" required minlength="8" maxlength="12" oninput="checkRut(this)" placeholder="Ingrese RUT"> <!-- tecnicaménte al darle mandar deberia fallar o guardarse bien -->
              <!-- <input type="text" id="rut" placeholder="12.345.678-5" required minlength="8" maxlength="12"> <!-- longitud minima de 8 considerando la gente de 9 millones que aún viven y máximo 12 considerando los puntos y guion -->
              <!--  <small class="error-msg" id="err-rut"></small>-->
             </div>
